--- a/src/sections/Projects/ProjectsStyles.module.css
+++ b/src/sections/Projects/ProjectsStyles.module.css
@@ -10,7 +10,7 @@
     border-radius: 20px;
   }
 
-  .a {
+  a {
     width: fit-content;
     text-decoration: none;
     color: #222;
@@ -20,11 +20,20 @@
   a:hover {
     transform: scale(1.05);
   }
+}
 
-  .projectsContainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 30px;
+.projectsContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 30px;
+}
+
+@media (width >= 800px) {
+  .projectContainer {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    padding: 0 30px;
   }
 }
